--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "6282 738 951",
-	"ownerNumberr": "+91 6282 738 951",
-	"botnumber": "6282 738 951",
+	"ownerNumber": "7025949806",
+	"ownerNumberr": "+91 7025949806",
+	"botnumber": "7025949806",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
